import 'package:flutter/material.dart';
import 'patient_list.dart';

class Login extends StatefulWidget {
  const Login({super.key});

  @override
  _LoginState createState() => _LoginState();
}

class _LoginState extends State<Login> {
...
                    ),
                  ),
                  SizedBox(height: 24),

                  // App Title
                  Text(
                    'SenCare',
                    style: TextStyle(
                      fontSize: 36,
                      fontWeight: FontWeight.bold,
                      color: Theme.of(context).primaryColor,
                      letterSpacing: 1.2,
                    ),
...
